fix grid items overflow

--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -101,6 +101,22 @@
   }
 }
 
+.cloud4 {
+  display: none;
+}
+
+@media (min-width: 1366px) {
+  .cloud4 {
+    display: block;
+    background-image: url(/cloud3.png);
+    width: 203px;
+    height: 100px;
+    position: absolute;
+    top: 20%;
+    left: 70%;
+  }
+}
+
 .tagline {
   font-size: 3rem;
   max-width: 15rem;
@@ -207,18 +223,16 @@
 
 .skills {
   display: grid;
-  grid-template-columns: 132px 132px;
-  grid-auto-rows: 132px;
+  grid-template-columns: repeat(2, 112px);
 
   gap: 1rem;
 }
 
 .skills li {
-  display: block;
-  box-sizing: border-box;
   background-color: white;
   padding: 1rem;
   border-radius: 2rem;
+  max-width: 112px;
 }
 
 .footer {
